fix spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -37,3 +37,12 @@ input {
   display: none;
 }
 
+.card-img-top.w-100.d-block {
+  border: 1px solid black;
+  border-radius: 2px;
+}
+
+.card {
+  margin-bottom: 10px;
+}
+
